--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@ html {
   /* line-height: 1.5; */
   box-sizing: border-box;
   color: #fff;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   scroll-behavior: smooth;
 }
 
@@ -21,6 +21,19 @@ body {
   margin: 0;
 }
 
+h1,
+h2,
+h3,
+p,
+ul {
+  margin: 0;
+}
+
+ul {
+  padding-left: 0;
+  list-style: none;
+}
+
 a {
   color: #e5e5e5;
   text-decoration: none;
@@ -34,18 +47,19 @@ a:hover {
 img {
   max-width: 100%;
   width: 100%;
-  border-radius: 2rem;
+}
+
+video {
+  width: 100%;
+  max-width: 400px;
 }
 
 footer {
-  text-align: center;
-  margin: 1.5rem;
-  font-weight: 200;
+  position:relative;
+  transform: translateY(22%);
   color: #f1a600;
-  background-color: #1f1d2c;
+  background-color: #242635;
 }
-
-
 
 /** Navbar */
 .navbar {
@@ -55,7 +69,7 @@ footer {
   height: var(--navbar-height);
   color: #e5e5e5;
   z-index: 1;
-  transition: all .2s ease;
+  transition: all 0.2s ease;
   background-color: #1f1d2c;
 }
 
@@ -89,7 +103,7 @@ footer {
 .menu__link {
   color: #e5e5e5;
   font-weight: 500;
-  transition: .2s ease-in-out;
+  transition: 0.2s ease-in-out;
 }
 
 .menu__link:hover {
@@ -100,12 +114,12 @@ footer {
 @media (max-width: 768px) {
   .menu {
     position: fixed;
-    top: -50%;
+    top: -60%;
     left: 0;
     width: 100%;
     background-color: #1f1d2c;
     padding: 2rem 0 2rem;
-    transition: all .1s ease-in;
+    transition: all 0.1s ease-in;
   }
 
   .menu.show--menu {
@@ -154,7 +168,7 @@ footer {
 }
 
 .wrapper {
-  max-width: 1024px;
+  /* max-width: 1024px; */
   margin: 0 auto;
   margin-top: var(--navbar-height);
 }
@@ -176,62 +190,99 @@ footer {
   display: grid;
 }
 
-
 @media (max-width: 769px) {
-
   /** home */
   .home__content {
-    margin: 2.5rem;
+    margin: 0 1rem;
     display: flex;
     flex-direction: column;
-    text-align: center;
+    align-items: center;
   }
 
   .home__info {
     width: 100%;
-    height: inherit;
+    height: auto;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    gap: 0.5rem;
+    text-align: center;
+    margin: 1rem 0;
   }
 
   .home__name {
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+    animation: rainbow-slide 8s linear infinite;
+    background-size: 300% 100%;
+    background-image: linear-gradient(
+      90deg,
+      #e5600b 5%,
+      #bfaf00 14%,
+      #3c7087 63%,
+      #f1a600
+    );
+    font-size: 2.3rem;
+    font-weight: 700;
     margin: 0;
-    font-size: 2.6rem;
-    font-weight: 600;
+  }
+
+  @keyframes rainbow-slide {
+    0% {
+      background-position: 0 50%;
+    }
+
+    50% {
+      background-position: 100% 50%;
+    }
+
+    to {
+      background-position: 0 50%;
+    }
   }
 
   .home__description {
+    margin: 0 auto;
+    max-width: 30rem;
     padding: 0 1.3rem;
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-weight: 200;
   }
 
   .home__image {
     position: relative;
-    width: 16rem;
+    width: 12rem;
+    overflow: hidden;
+    aspect-ratio: 1;
+    border-radius: 50%;
+    border: 5px solid rgba(156, 156, 156, 0.104);
+    margin-bottom: 1rem;
   }
 
-  .home__social {
+  .home__icons-container {
     justify-content: center;
     font-size: 1.2rem;
     font-weight: 200;
     text-align: center;
-  }
-
-  .home__social span {
-    font-weight: 500;
-    color: #f1a600;
+    padding-top: 1rem;
+    margin-bottom: 2rem;
   }
 
   .home__icons {
-    gap: 1.5rem;
+    justify-content: space-between;
+    gap: 10px;
   }
 
   .home__icons img {
-    width: 2.5rem;
-    border-radius: 0;
+    width: 2.6rem;
+    filter: invert(70%) sepia(14%) saturate(5885%) hue-rotate(3deg)
+      brightness(97%) contrast(101%);
   }
+
+  /* .home__icons img:active{
+    filter: drop-shadow(0 0 5px #f1a600);
+    transform: scale(1.09);
+    transition: transform 600ms ease-in-out;
+  }  */
 
   .about {
     color: #e5e5e5;
@@ -248,39 +299,54 @@ footer {
   }
 
   .about__title {
+    padding-top: 0.5rem;
     font-size: 2.5rem;
     font-weight: 400;
   }
 
   .about__description {
-    font-size: .8rem;
-    font-weight: 200;
+    font-size: 0.7rem;
+    font-weight: 100;
+  }
+
+  .about__description-span {
+    font-weight: 400;
+  }
+
+  .about__icons-container {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
   }
 
   .about__icons {
     display: flex;
     flex-direction: column;
+    align-items: center;
     justify-content: center;
-    text-align: center;
-    gap: 2.5rem;
+    padding-bottom: 1rem;
   }
 
-  .about__icons img {
+  .about__icons-img {
     width: 4rem;
   }
 
-  .about__icons span {
+  .about__icons-span {
     font-weight: 600;
   }
 
-  .download_title {
-    font-size: 0.9rem;
-    font-weight: 500;
+  .about__icons-title {
+    margin-top: 10px;
+    font-size: 0.6rem;
+    font-weight: 200;
   }
 
-  .cv_download {
-    filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(288deg) brightness(102%) contrast(102%);
+  .about__icons-img:last-child {
+    filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(288deg)
+      brightness(102%) contrast(102%);
   }
+
+  
 
   /** Experience */
   .experience {
@@ -289,62 +355,83 @@ footer {
     padding: 1rem 3rem;
   }
 
-  .experience__content {
-    margin-bottom: 2rem;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    gap: 2rem;
-    align-self: flex-start;
-    font-size: 0.7rem;
-  }
-
   .experience__title {
     font-size: 2.5rem;
     font-weight: 500;
+    text-align: center;
+    padding-top: 1rem;
   }
 
-  .experience1,
-  .experience2,
-  .experience3 {
+  .experience__content {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    flex-direction: column;
+  }
+
+  .experience_info-img {
+    width: 100%;
+    position: relative;
+    top: -5rem;
+    filter: invert(50%) sepia(7%) saturate(327%) hue-rotate(15deg)
+      brightness(89%) contrast(87%);
+  }
+
+  .experience_info {
+    margin: 0 auto;
+    height: 13rem;
+  }
+
+  .experience_info-items {
+    position: relative;
+    transform: translateY(-300%);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
   }
 
-  .experience__description {
-    align-self: start;
-  }
-
-  .experience__description span {
-    font-weight: 600;
-    font-size: .8rem;
-  }
-
-  .experience img {
-    width: 4rem;
-  }
-
-  .skills__image {
-    border-radius: 1rem;
-    width: 6rem;
-    filter: invert(50%) sepia(7%) saturate(327%) hue-rotate(15deg) brightness(89%) contrast(87%);
-  }
-
-  .years {
+  .experience_info-title {
     font-size: 1rem;
-    font-weight: 600;
+  }
+
+  .experience_item{
+    font-size: .7rem;
+    font-weight: 200;
+  }
+
+.experience_item-span{
+  font-weight: 400;
+}
+
+  .experience_item-span::after{
+    content: ': ';
+  }
+  
+  .experience_description {
+    margin: 0 1rem;
+    font-size: 0.7rem;
+    font-weight: 100;
+    padding-bottom: 2rem;
+  }
+
+  .experience_list-items{
+    position: relative;
+    margin: 5px;
+  }
+  .experience_span{
+    font-weight: 400;
   }
 
   /** Projects */
-  .projects {
-    padding: 0 4rem;
-    margin: 4rem 0;
-    text-align: center
+  .projects-container {
+    margin-top: 1rem;
+    color: #e5e5e5;
+    background-color: #242635;
+    padding: 2rem 2rem;
+    text-align: center;
   }
 
   .project__title {
+    margin: 1rem 0;
     font-size: 2.5rem;
     font-weight: 400;
   }
@@ -356,116 +443,114 @@ footer {
     gap: 1rem;
   }
 
-  /** Contact */
-  .contact {
-    padding: 2.5rem 3rem;
-    background-color: #242635;
+  .project{
+    background-color: #1f1d2c;
+    border-radius: 10px;
+    overflow: hidden;
+    /* padding-bottom: 1rem; */
   }
 
+  .project_info {
+    padding: 8px 1rem;
+    font-size: .8rem;
+    font-weight: 200;
+    position: relative;
+  }
+
+  .project_name{
+    margin-bottom: 7px;
+    border-bottom: 3px solid #242635;
+    font-size: 1.2rem;
+  }
+
+  .project_info a{
+    color: #f1a600;
+  }
+
+  .project_list{
+    display: flex;
+    flex-direction: column;
+    gap: 7px;
+    padding-bottom: 10px;
+  }
+
+  .project_list-span{
+    font-weight: 500;
+  }
+
+  /** Contact */
+  .contact {
+    margin-top: 1rem;
+    color: #e5e5e5;
+    background-color: #1f1d2c;
+    padding: 2rem 4rem;
+    text-align: center;
+  }
+  
   .contact__title {
     text-align: center;
     font-size: 2.5rem;
     font-weight: 400;
   }
 
-  .contact__content {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
+  .contact__items-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: auto;
+    gap: 1rem;
   }
 
-  .contact__form {
-    background-color: #242635;
-    max-width: 80%;
-    margin-left: 2.5rem;
-    border-radius: 1rem;
-  }
-
-  .header__contact {
-    width: 100%;
-    background-color: #1f1d2c;
-    overflow: hidden;
-    color: #f1a600;
-    border-radius: 1rem;
-  }
-
-  .header__image {
-    font-size: 2rem;
-    display: block;
-    text-align: center;
-  }
-
-  .form {
-    padding: .5rem;
-    overflow: hidden;
-    color: #e5e5e5;
-  }
-
-  .form label,
-  .form input,
-  .form textarea {
-    display: block;
-    width: 100%;
-    margin-bottom: 2px;
-    border-radius: 0.3rem;
-  }
-
-  .form label {
-    font-size: .8rem;
-    font-weight: 400;
-  }
-
-  .form input:not([type='submit']),
-  .form textarea {
-    border: none;
-    border-bottom: 2px solid #f1a600;
-    margin-bottom: .4rem;
-    font-size: .7rem;
-    outline: none;
-    color: #242635;
-  }
-
-  .form textarea {
-    min-height: 100px;
-  }
-
-  input[type='submit'] {
-    padding: 10px;
-    border: none;
-    background-color: #f1a600;
-    color: #242635;
-    font-size: 1rem;
-    cursor: pointer;
-  }
-
-  .contact__icons {
-    display: flex;
-    justify-content: space-evenly;
+  .contact_item {
     margin-top: 1.5rem;
   }
 
-  .phone,
-  .mail {
-    width: 4rem;
-    font-size: .6rem;
-    font-weight: 300;
-    text-align: center;
+  .contact__logo{
+    width: 5rem;
+    filter: invert(70%) sepia(14%) saturate(5885%) hue-rotate(3deg)
+      brightness(97%) contrast(101%);
   }
 
-  .phone span,
-  .mail span {
-    font-weight: 600;
-    color: #f1a600;
+  .contact__logo:active {
+    filter: drop-shadow(0 0 5px #f1a600);
+    transform: scale(1.09);
   }
 
-  footer {
-    text-align: center;
-    margin: 1rem;
-    font-weight: 200;
-    color: #f1a600;
-    font-size: 0.8rem;
-    background-color: #1f1d2c;
+  .footer {
+    background-color: #242635;
+    border-top: .8px solid #f1a600;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding-top: 7px;
+    padding-bottom: 7px;
+  }
+
+  .footer_list{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 2.5px;
+  }
+
+  .footer-container{
+    display: flex;
+    font-size: 0.5rem;
+    font-weight: 100;
+  }
+
+  .footer-container:first-child {
+    text-align: justify;
+    padding-left: 2rem;
+  }
+
+  .footer-container:last-child{
+    width: 100%;
+    text-align: end;
+    padding-right: 2rem;
+  }
+  .footer_list:last-child{
+    width: 100%;
+    position: relative;
+    right: 0;
   }
 }
 
@@ -473,55 +558,58 @@ footer {
 
 @media (min-width: 768px) {
   .home {
-    margin-bottom: 1rem;
-    padding: 1.5rem 2rem;
+    max-width: 1024px;
+    margin: 0 auto;
+    padding: 2rem 0;
   }
 
   .home__content {
     display: grid;
-    grid-template-columns: 2fr 1.5fr;
-    align-items: center;
+    grid-template-columns: 1.5fr 1fr;
   }
 
   .home__info {
+    margin: 2rem;
+    padding-top: 1rem;
+    padding-left: 2rem;
+    display: flex;
     flex-direction: column;
-    text-align: start;
-    grid-row: 1/2;
-    grid-column: 1/2;
+    gap: 1rem;
   }
 
   .home__name {
-    font-size: 3.2rem;
+    font-size: 4rem;
     font-weight: 600;
   }
 
   .home__description {
-    padding: 0.5rem 2rem 1rem 0;
+    margin-right: 2rem;
+    /* padding-top: 1rem; */
+    padding-right: 2rem;
     font-size: 1.3rem;
     font-weight: 200;
+    color: rgb(201, 201, 201);
   }
 
   .home__image {
     grid-column: 2/3;
     grid-row: 1/4;
-    width: 30rem;
+    width: 25rem;
+    overflow: hidden;
+    aspect-ratio: 1;
+    border-radius: 50%;
+    border: 1rem solid #242635;
   }
 
-  .home__social {
+  .home__icons-container {
     display: flex;
     flex-direction: column;
     text-align: center;
     position: relative;
-    padding-right: 3rem;
     align-items: center;
-    font-size: 1.4rem;
-    font-weight: 300;
-    gap: 1rem
-  }
-
-  .home__social span {
-    color: #f1a600;
-    font-weight: 600;
+    margin-top: 1rem;
+    padding-bottom: 1rem;
+    gap: 1rem;
   }
 
   .home__icons {
@@ -530,8 +618,16 @@ footer {
   }
 
   .home__icons img {
-    width: 2.7rem;
+    width: 3.5rem;
     border-radius: 0;
+    filter: invert(70%) sepia(14%) saturate(5885%) hue-rotate(3deg)
+      brightness(97%) contrast(101%);
+  }
+
+  .home__icons img:hover {
+    filter: drop-shadow(0 0 5px #f1a600);
+    transform: scale(1.09);
+    transition: transform 600ms ease;
   }
 
   /** About */
@@ -577,7 +673,8 @@ footer {
   }
 
   .cv_download {
-    filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(288deg) brightness(102%) contrast(102%);
+    filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(288deg)
+      brightness(102%) contrast(102%);
   }
 
   /** Experience */
@@ -585,16 +682,7 @@ footer {
     color: #e5e5e5;
     background-color: #1f1d2c;
     padding: 2rem 2rem;
-  }
-
-  .experience__content {
-    margin: 1rem;
-    display: flex;
-    flex-direction: column;
     text-align: center;
-    gap: 1.5rem;
-    align-self: flex-start;
-    font-size: 1rem;
   }
 
   .experience__title {
@@ -602,35 +690,19 @@ footer {
     font-weight: 500;
   }
 
-  .experience1,
-  .experience2,
-  .experience3 {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+  .experience__content {
+    display: grid;
+    box-sizing: border-box;
+    grid-template-columns: repeat(2, 1fr);
     align-items: center;
   }
 
-  .experience__description {
-    align-self: start;
-  }
-
-  .experience__description span {
-    font-weight: 600;
-    font-size: 1.5rem;
-  }
-
-  .skills__image {
+  .experience img {
     border-radius: 1rem;
-    width: 5rem;
-    filter: invert(50%) sepia(7%) saturate(327%) hue-rotate(15deg) brightness(89%) contrast(87%);
-    /* background-color: #e5e5e5; */
+    width: 12rem;
+    filter: invert(50%) sepia(7%) saturate(327%) hue-rotate(15deg)
+      brightness(89%) contrast(87%);
   }
-
-  /* .experience img {
-    width: 4rem;
-    height: 4rem;
-  } */
 
   .years {
     font-size: 1.3rem;
@@ -644,23 +716,66 @@ footer {
   }
 
   .project__content {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    display: flex;
+    flex-wrap: wrap;
     gap: 1rem;
-    max-width: max-content;
-    padding: 2rem;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 1rem 0;
   }
 
-  .projects h2 {
-    display: flex;
+  .project__title {
+    text-align: center;
     font-size: 2.5rem;
     font-weight: 500;
-    justify-content: center;
+    margin-bottom: 2rem;
   }
 
-  .project__container {
-    border-radius: 2rem;
+  .project_item {
+    display: flex;
+    flex-direction: column;
+    width: max-content;
+    overflow: hidden;
+    border-radius: 1rem;
     box-shadow: 3px 3px 8px #1f1d2c;
+    gap: 0.8rem;
+    margin-top: 1rem;
+    background-color: #1f1d2c;
+  }
+
+  .project_item:hover {
+    box-shadow: 0 0 10px #242635;
+    transform: scale(1.06);
+    transition: transform 200ms ease;
+  }
+
+  .project_name {
+    width: max-content;
+    margin-top: 0.5rem;
+    margin-left: 2rem;
+    border-bottom: 1px solid grey;
+  }
+
+  .project_list {
+    display: flex;
+    flex-direction: column;
+    margin-left: 2rem;
+    margin-bottom: 1rem;
+    gap: 0.5rem;
+  }
+
+  .project_list-item {
+    font-size: 0.8rem;
+    font-weight: 200;
+    width: 330px;
+    color: rgb(180, 178, 178);
+  }
+
+  .project_list-span {
+    font-size: 1rem;
+    font-weight: 400;
+    color: whitesmoke;
+    padding-right: 0.5rem;
   }
 
   /** Contact */
@@ -702,11 +817,11 @@ footer {
     font-size: 4rem;
     display: block;
     text-align: center;
-    padding: .5rem;
+    padding: 0.5rem;
   }
 
   .form {
-    padding: .5rem;
+    padding: 0.5rem;
     overflow: hidden;
     color: #e5e5e5;
   }
@@ -724,7 +839,7 @@ footer {
     font-weight: 400;
   }
 
-  .form input:not([type='submit']),
+  .form input:not([type="submit"]),
   .form textarea {
     border: none;
     border-bottom: 2px solid #f1a600;
@@ -738,7 +853,7 @@ footer {
     min-height: 100px;
   }
 
-  input[type='submit'] {
+  input[type="submit"] {
     padding: 10px;
     border: none;
     background-color: #f1a600;
@@ -773,7 +888,7 @@ footer {
   }
 
   .phone p {
-    font-size: .8rem;
+    font-size: 0.8rem;
     font-weight: 400;
     color: grey;
   }
