--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,11 +110,12 @@ footer {
   color: #f1a600;
 }
 
+
 /* hasta los 768PX, 0 - 768 */
 @media (max-width: 768px) {
   .menu {
     position: fixed;
-    top: -60%;
+    top: -70%;
     left: 0;
     width: 100%;
     background-color: #1f1d2c;
@@ -141,7 +142,6 @@ footer {
   }
 
   .menu--open {
-    /* margin-top: 2rem; */
     margin-right: 2rem;
     cursor: pointer;
   }
@@ -193,7 +193,7 @@ footer {
 @media (max-width: 769px) {
   /** home */
   .home__content {
-    margin: 0 1rem;
+    margin: 2rem 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -278,12 +278,6 @@ footer {
       brightness(97%) contrast(101%);
   }
 
-  /* .home__icons img:active{
-    filter: drop-shadow(0 0 5px #f1a600);
-    transform: scale(1.09);
-    transition: transform 600ms ease-in-out;
-  }  */
-
   .about {
     color: #e5e5e5;
     background-color: #242635;
@@ -299,18 +293,19 @@ footer {
   }
 
   .about__title {
-    padding-top: 0.5rem;
+    padding-top: 1.5rem;
     font-size: 2.5rem;
     font-weight: 400;
   }
 
   .about__description {
-    font-size: 0.7rem;
-    font-weight: 100;
+    font-size: 0.8rem;
+    font-weight: 200;
+    word-spacing: 1px;
   }
 
   .about__description-span {
-    font-weight: 400;
+    font-weight: 500;
   }
 
   .about__icons-container {
@@ -331,14 +326,10 @@ footer {
     width: 4rem;
   }
 
-  .about__icons-span {
-    font-weight: 600;
-  }
-
   .about__icons-title {
     margin-top: 10px;
-    font-size: 0.6rem;
-    font-weight: 200;
+    font-size: 0.7rem;
+    font-weight: 400;
   }
 
   .about__icons-img:last-child {
@@ -352,14 +343,14 @@ footer {
   .experience {
     color: #e5e5e5;
     background-color: #1f1d2c;
-    padding: 1rem 3rem;
+    padding: 1rem 2rem;
   }
 
   .experience__title {
     font-size: 2.5rem;
     font-weight: 500;
     text-align: center;
-    padding-top: 1rem;
+    padding-top: 2rem;
   }
 
   .experience__content {
@@ -394,7 +385,7 @@ footer {
   }
 
   .experience_item{
-    font-size: .7rem;
+    font-size: .8rem;
     font-weight: 200;
   }
 
@@ -408,8 +399,8 @@ footer {
   
   .experience_description {
     margin: 0 1rem;
-    font-size: 0.7rem;
-    font-weight: 100;
+    font-size: 0.8rem;
+    font-weight: 200;
     padding-bottom: 2rem;
   }
 
@@ -418,7 +409,7 @@ footer {
     margin: 5px;
   }
   .experience_span{
-    font-weight: 400;
+    font-weight: 500;
   }
 
   /** Projects */
@@ -431,7 +422,7 @@ footer {
   }
 
   .project__title {
-    margin: 1rem 0;
+    margin: 1.5rem 0;
     font-size: 2.5rem;
     font-weight: 400;
   }
@@ -452,7 +443,7 @@ footer {
 
   .project_info {
     padding: 8px 1rem;
-    font-size: .8rem;
+    font-size: .9rem;
     font-weight: 200;
     position: relative;
   }
@@ -480,7 +471,7 @@ footer {
 
   /** Contact */
   .contact {
-    margin-top: 1rem;
+    text-align: center;
     color: #e5e5e5;
     background-color: #1f1d2c;
     padding: 2rem 4rem;
@@ -488,7 +479,9 @@ footer {
   }
   
   .contact__title {
-    text-align: center;
+    padding: 1rem 0;
+    max-width: max-content;
+    margin: 0 auto;
     font-size: 2.5rem;
     font-weight: 400;
   }
@@ -497,15 +490,11 @@ footer {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: auto;
-    gap: 1rem;
-  }
-
-  .contact_item {
-    margin-top: 1.5rem;
+    gap: 2rem;
   }
 
   .contact__logo{
-    width: 5rem;
+    width: 4rem;
     filter: invert(70%) sepia(14%) saturate(5885%) hue-rotate(3deg)
       brightness(97%) contrast(101%);
   }
@@ -513,6 +502,12 @@ footer {
   .contact__logo:active {
     filter: drop-shadow(0 0 5px #f1a600);
     transform: scale(1.09);
+  }
+
+  .contact_name{
+    margin: 0 auto;
+    width: max-content;
+    border-bottom: 1px solid grey
   }
 
   .footer {
@@ -533,19 +528,19 @@ footer {
 
   .footer-container{
     display: flex;
-    font-size: 0.5rem;
+    font-size: 0.6rem;
     font-weight: 100;
   }
 
   .footer-container:first-child {
     text-align: justify;
-    padding-left: 2rem;
+    padding-left: 1.5rem;
   }
 
   .footer-container:last-child{
     width: 100%;
     text-align: end;
-    padding-right: 2rem;
+    padding-right: 1.5rem;
   }
   .footer_list:last-child{
     width: 100%;
@@ -558,9 +553,10 @@ footer {
 
 @media (min-width: 768px) {
   .home {
+    height: 80vh;
     max-width: 1024px;
-    margin: 0 auto;
-    padding: 2rem 0;
+    margin: 1rem auto;
+    padding: 3rem 0;
   }
 
   .home__content {
@@ -582,6 +578,25 @@ footer {
     font-weight: 600;
   }
 
+  .home__name-span{
+    transition: .5s linear;
+  }
+
+  .home__name-span:hover:nth-child(1){
+    margin-right: 5px;
+  }
+
+  .home__name-span:hover:nth-child(2){
+    margin-left: 10px;
+  }
+
+  .home__name-span:hover{
+    color: rgb(233, 233, 233);
+    text-shadow: 0 0 10px #3c7087,
+    0 0 20px #fff,
+    0 0 40px#3c7087;
+  }
+
   .home__description {
     margin-right: 2rem;
     /* padding-top: 1rem; */
@@ -599,6 +614,13 @@ footer {
     aspect-ratio: 1;
     border-radius: 50%;
     border: 1rem solid #242635;
+    transition: 0.4s ;
+  }
+
+  .home__image:hover{
+    transform: scale(1.08);
+    box-shadow: 0 0 5px #fff;
+    /* 0 0 155px #fff; */
   }
 
   .home__icons-container {
@@ -617,14 +639,14 @@ footer {
     gap: 3rem;
   }
 
-  .home__icons img {
+  .home__logo{
     width: 3.5rem;
     border-radius: 0;
     filter: invert(70%) sepia(14%) saturate(5885%) hue-rotate(3deg)
       brightness(97%) contrast(101%);
   }
 
-  .home__icons img:hover {
+  .home__logo:hover {
     filter: drop-shadow(0 0 5px #f1a600);
     transform: scale(1.09);
     transition: transform 600ms ease;
@@ -632,39 +654,50 @@ footer {
 
   /** About */
   .about {
+    width: 100%;
+    height: 100vh;
     padding: 2rem 2rem;
-    height: auto;
     background-color: #242635;
-  }
-
-  .about__content {
-    flex-direction: column;
     text-align: center;
   }
 
-  .about__info {
-    margin: 3rem 3.5rem;
-  }
-
   .about__title {
+    padding-top: 2.5rem;
     font-size: 3rem;
     font-weight: 600;
   }
 
   .about__description {
-    font-size: 1.2rem;
+    margin: 0 auto;
+    width: 80%;
+    padding-top: 1rem;
+    font-size: 1rem;
     font-weight: 200;
+    word-spacing: 1px;
   }
 
-  .about__icons {
+  .about__description-span{
+    font-weight: 500;
+  }
+
+  .about__icons-container {
     display: flex;
     justify-content: space-around;
     width: 100%;
-    gap: 2;
+    padding-top: 3rem;
   }
 
-  .about__icons img {
-    width: 6rem;
+  .about__icons-img{
+    width: 7rem;
+    aspect-ratio: 1;
+    border-radius: 50%;
+    transition: .3s ease;
+  }
+
+  .about__icons-img:hover{
+    transform:scale(1.12);
+    filter: drop-shadow(0 0 5px grey);
+    transition: transform 600ms ease;
   }
 
   .download_title {
@@ -672,13 +705,25 @@ footer {
     font-weight: 500;
   }
 
-  .cv_download {
+  .about__icons-img:last-child {
     filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(288deg)
       brightness(102%) contrast(102%);
   }
+  .about__icons-img:hover:last-child{
+    filter: drop-shadow(0 0 5px rgb(188, 188, 188));
+    transition: transform 600ms ease;  
+  }
+
+  .about__icons-title{
+    padding-top: 10px;
+    font-size: 1rem;
+    color: #e5e5e5;
+  }
 
   /** Experience */
-  .experience {
+  .experience-container{
+    width: 100%;
+    height: 100vh;
     color: #e5e5e5;
     background-color: #1f1d2c;
     padding: 2rem 2rem;
@@ -686,7 +731,8 @@ footer {
   }
 
   .experience__title {
-    font-size: 3rem;
+    padding-top: 2rem;
+    font-size: 2.5rem;
     font-weight: 500;
   }
 
@@ -695,214 +741,171 @@ footer {
     box-sizing: border-box;
     grid-template-columns: repeat(2, 1fr);
     align-items: center;
+    justify-content: center;
   }
 
-  .experience img {
-    border-radius: 1rem;
-    width: 12rem;
+  .experience_info-img {
+    width: 16rem;
     filter: invert(50%) sepia(7%) saturate(327%) hue-rotate(15deg)
       brightness(89%) contrast(87%);
   }
 
-  .years {
-    font-size: 1.3rem;
+  .experience_info-items{
+    font-size: 1rem;
+    font-weight: 300;
+  }
+
+  .experience_description{
+    text-align: left;
+    white-space: 1px;
+    padding: 1rem;
+    transform: translateY(20%);
+  }
+
+  .experience_list,
+  .experience_list-items{
+    margin-bottom: 10px;
+    padding-right: 3rem;
+    font-weight: 300;
+  }
+
+  .experience_span{
     font-weight: 600;
   }
 
   /** Projects */
-  .projects {
+  .projects-container{
+    width: 100%;
+    min-height: 100vh;
+    color: #e5e5e5;
     background-color: #242635;
-    padding: 3.5rem 1rem;
-  }
-
-  .project__content {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
-    justify-content: space-evenly;
-    align-items: center;
-    margin: 1rem 0;
-  }
-
-  .project__title {
+    padding: 3rem 2rem;
     text-align: center;
+  }
+
+  .project__title{
+    padding: 2rem 0;
     font-size: 2.5rem;
     font-weight: 500;
-    margin-bottom: 2rem;
   }
 
-  .project_item {
+  .project__content{
     display: flex;
-    flex-direction: column;
-    width: max-content;
-    overflow: hidden;
-    border-radius: 1rem;
-    box-shadow: 3px 3px 8px #1f1d2c;
-    gap: 0.8rem;
-    margin-top: 1rem;
+    flex-wrap: wrap;
+    row-gap: 1rem;
+    justify-content: space-evenly;
+  }
+
+  .project{
+    max-width: 30rem;
+    border-radius: 10px;
     background-color: #1f1d2c;
-  }
-
-  .project_item:hover {
-    box-shadow: 0 0 10px #242635;
-    transform: scale(1.06);
-    transition: transform 200ms ease;
-  }
-
-  .project_name {
-    width: max-content;
-    margin-top: 0.5rem;
-    margin-left: 2rem;
-    border-bottom: 1px solid grey;
-  }
-
-  .project_list {
+    overflow: hidden;
+    padding-bottom: .7rem;
     display: flex;
     flex-direction: column;
-    margin-left: 2rem;
-    margin-bottom: 1rem;
-    gap: 0.5rem;
+    gap: 10px;
   }
 
-  .project_list-item {
-    font-size: 0.8rem;
-    font-weight: 200;
-    width: 330px;
-    color: rgb(180, 178, 178);
+  .project:hover{
+    transform: scale(1.05);
+    filter: brightness(1.1);
+  }
+  
+  .project_info{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
   }
 
-  .project_list-span {
-    font-size: 1rem;
-    font-weight: 400;
-    color: whitesmoke;
-    padding-right: 0.5rem;
+  .project_name{
+    margin: 0 auto;
+    border-bottom: 1px solid rgba(128, 128, 128, 0.527);
+    width: max-content;
+  }
+
+  .project_list{
+    margin: 0 2rem;
+    font-size: .8rem;
   }
 
   /** Contact */
   .contact {
-    padding: 2rem 2rem;
-  }
-
-  .contact__title {
-    display: flex;
-    justify-content: center;
-    font-size: 2.5rem;
-    font-weight: 500;
-  }
-
-  .contact__items {
-    display: grid;
-    padding: 1rem;
-    gap: 1.5rem;
-    align-content: center;
-    grid-template-columns: repeat(2, 1fr);
-    align-items: center;
-  }
-
-  .contact__form {
-    background-color: #1f1d2c;
-    max-width: 80%;
-    margin-left: 5rem;
-  }
-
-  .header__contact {
     width: 100%;
-    background-color: #242635;
-    overflow: hidden;
-    color: #f1a600;
-    border-radius: 2rem;
-  }
-
-  .header__image {
-    font-size: 4rem;
-    display: block;
+    height: 70vh;
     text-align: center;
-    padding: 0.5rem;
-  }
-
-  .form {
-    padding: 0.5rem;
-    overflow: hidden;
     color: #e5e5e5;
+    background-color: #1f1d2c;
+    padding: 2rem 4rem;
+    text-align: center;
   }
-
-  .form label,
-  .form input,
-  .form textarea {
-    display: block;
-    width: 100%;
-    margin-bottom: 8px;
-    border-radius: 0.4rem;
-  }
-
-  .form label {
+  
+  .contact__title {
+    padding: 1rem 0;
+    max-width: max-content;
+    margin: 0 auto;
+    font-size: 2.5rem;
     font-weight: 400;
   }
 
-  .form input:not([type="submit"]),
-  .form textarea {
-    border: none;
-    border-bottom: 2px solid #f1a600;
-    margin-bottom: 1rem;
-    font-size: 1rem;
-    outline: none;
-    color: #242635;
+  .contact__items-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: auto;
+    gap: 2rem;
   }
 
-  .form textarea {
-    min-height: 100px;
+  .contact__logo{
+    width: 5rem;
+    filter: invert(70%) sepia(14%) saturate(5885%) hue-rotate(3deg)
+      brightness(97%) contrast(101%);
   }
 
-  input[type="submit"] {
-    padding: 10px;
-    border: none;
-    background-color: #f1a600;
-    color: #242635;
-    font-size: 1.5rem;
-    cursor: pointer;
+  .contact__logo:hover {
+    filter: drop-shadow(0 0 5px #f1a600);
+    transform: scale(1.09);
   }
 
-  .contact__icons {
+  .contact_name{
+    margin: 0 auto;
     width: max-content;
-    align-items: center;
-    text-align: center;
-    margin-left: 3rem;
-    padding: 5rem;
+    border-bottom: 1px solid grey
   }
 
-  .phone {
-    width: 8rem;
+  .footer {
+    background-color: #242635;
+    border-top: .8px solid #f1a600;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding: 1rem 0;
   }
 
-  .mail {
-    width: 8rem;
-    text-align: center;
-    margin-top: 5rem;
+  .footer_list{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 2.5px;
   }
 
-  .phone span {
-    font-size: 1rem;
-    text-align: center;
-    font-weight: 700;
-    color: #fff;
+  .footer-container{
+    display: flex;
+    font-size: 0.9rem;
+    font-weight: 200;
   }
 
-  .phone p {
-    font-size: 0.8rem;
-    font-weight: 400;
-    color: grey;
+  .footer-container:first-child {
+    text-align: justify;
+    padding-left: 3rem;
   }
 
-  .mail span {
-    font-size: 1rem;
-    text-align: center;
-    font-weight: 600;
-    color: #fff;
+  .footer-container:last-child{
+    width: 100%;
+    text-align: end;
+    padding-right: 3rem;
   }
-
-  .mail p {
-    font-size: 0.8rem;
-    font-weight: 400;
-    color: grey;
+  .footer_list:last-child{
+    width: 100%;
+    position: relative;
+    right: 0;
   }
 }
